# financev1

./: .gitignore
backend/: pyproject.toml
backend/finance/: settings.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/components/Api/: ApiHomePage.js  settings.js
frontend/src/components/Menu/: index.js
frontend/src/resources/css/: HomeBlock.css  PossibilitiesBlock.css  SubscribesBlock.css
frontend/src/view/Home/: HomeBlock.js  LoginBlock.js  PossibilitiesBlock.js  SubscribesBlock.js  index.js
