[tool.poetry]
name = "finance"
version = "0.1.0"
description = "Financial analyst of personal budget and family budget"
authors = ["maximkovalev <mkovalevhse@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
gunicorn = "^20.1.0"
django-environ = "^0.7.0"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
